initial skeleton of create/read is added.
#1.

--- a/build.gradle
+++ b/build.gradle
@@ -24,15 +24,15 @@ repositories {
 }
 
 dependencies {
-//    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'dev.langchain4j:langchain4j-spring-boot-starter:1.0.1-beta6'
 //    implementation 'dev.langchain4j:langchain4j-mistral-ai-spring-boot-starter:1.0.1-beta6'
     implementation 'dev.langchain4j:langchain4j-ollama-spring-boot-starter:1.0.1-beta6'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
-//    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
-//    runtimeOnly 'org.postgresql:postgresql'
+    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
+    runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
