--- a/compose.yaml
+++ b/compose.yaml
@@ -8,14 +8,14 @@ services:
     ports:
       - '5432:5432'
 #    restart: unless-stopped
-    restart: no
-  pgadmin:
-    image: dpage/pgadmin4
-    environment:
-      PGADMIN_DEFAULT_EMAIL: admin@example.com
-      PGADMIN_DEFAULT_PASSWORD: admin
-    ports:
-      - '8081:81'
-    depends_on:
-      - postgres
-    restart: unless-stopped
+#    restart: no
+#  pgadmin:
+#    image: dpage/pgadmin4
+#    environment:
+#      PGADMIN_DEFAULT_EMAIL: admin@example.com
+#      PGADMIN_DEFAULT_PASSWORD: admin
+#    ports:
+#      - '8081:81'
+#    depends_on:
+#      - postgres
+#    restart: unless-stopped
